--- a/src/app/customers/customer-list/customer-list.component.html
+++ b/src/app/customers/customer-list/customer-list.component.html
@@ -24,7 +24,7 @@
                     <tr *ngFor="let customer of search()">
                         <td>{{customer.customerName}}</td>
                         <td>{{customer.phoneNumber}}</td>
-                        <td><button (click)="deleteCustomer(customer.customerId)" class="btn btn-danger" href="#">delete</button><a class="btn" [routerLink]="['/customers/edit/'+customer.customerId]">edit</a></td>
+                        <td class="d-flex gap-2"><button (click)="deleteCustomer(customer.customerId)" class="btn btn-danger" href="#">delete</button><a class="btn btn-info" [routerLink]="['/customers/edit/'+customer.customerId]">edit</a></td>
                     </tr>
                 </tbody>
                 
