--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="d-grid p-1 mx-4 gap-2">
   <app-navbar></app-navbar>
   <router-outlet></router-outlet>
 </div>
