--- a/src/app/invoices/invoice-list/invoice-list.component.html
+++ b/src/app/invoices/invoice-list/invoice-list.component.html
@@ -16,6 +16,7 @@
                 <thead>
                     <tr>
                         <th>Customer Id</th>
+                        <th>Customer Name</th>
                         <th>Invoice Date</th>
                         <th>Value</th>
                         <th>State</th>
@@ -23,12 +24,13 @@
                     </tr>
                 </thead>
                 <tbody *ngIf="!state.isLoading">
-                    <tr *ngFor="let invoice of search()">
+                    <tr (dblclick)="openDetails(invoice.invoiceId)" *ngFor="let invoice of search()">
                         <td>{{invoice.customerId}}</td>
+                        <td>{{invoice.customer?.customerName}}</td>
                         <td>{{invoice.invoiceDate | date}}</td>
                         <td>{{invoice.value}}</td>
-                        <td>{{invoice.state}}</td>
-                        <td><button (click)="deleteInvoice(invoice.invoiceId)" class="btn btn-danger" href="#">delete</button><a class="btn" [routerLink]="['/invoices/edit/'+invoice.invoiceId]">edit</a></td>
+                        <td>{{getInvoiceStateText(invoice.state)}}</td>
+                        <td class="d-flex gap-2"><button (click)="deleteInvoice(invoice.invoiceId)" class="btn btn-danger" href="#">delete</button><a class="btn btn-info" [routerLink]="['/invoices/edit/'+invoice.invoiceId]">edit</a></td>
                     </tr>
                 </tbody>
                 
