--- a/src/app/shared/components/home/home.component.html
+++ b/src/app/shared/components/home/home.component.html
@@ -1,9 +1,9 @@
-<div *ngIf="!state.isLoading" class="row">
-    <div class="col-sm">
+<div *ngIf="!state.isLoading" class="row mx-0 gap-4">
+    <div class="bg-info p-1 col-sm-3 rounded">
         <h2>Customers: </h2>
         <h3>{{state.customers}}</h3>
     </div>
-    <div class="col-sm">
+    <div class="bg-info p-1 col-sm-3 rounded">
         <h2>Invoices: </h2>
         <h3>{{state.invoices}}</h3>
     </div>
